k8s/jenkins-service-jnlp.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-service-jnlp
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins-master
  ports:
    - name: jnlp
      port: 50000
      targetPort: 50000
#      nodePort: 32500
