k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-service
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins-master
  ports:
  - name: http
    port: 65432
    targetPort: 8080
    nodePort: 32767
#  - name: jnlp
#    port: 50000
#    targetPort: 50000
#    nodePort: 32500
